phase2 80%